# crowd-flow-analyzer

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: afbaeef965c2_add_model_selection_and_pipeline_config_.py  c864f2d3917b_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: analytics.py  videos.py
backend/app/ml/: annotator.py  demographics.py  detector.py  device.py  models.py  pipeline.py  tracker.py
backend/app/worker/: celery_app.py  tasks.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgeDistributionChart.tsx  FootTrafficChart.tsx  GenderDistributionChart.tsx  ProcessingProgress.tsx  VideoPlayer.tsx
frontend/src/pages/: DashboardPage.tsx  UploadPage.tsx  VideoListPage.tsx
frontend/src/types/: index.ts
