[project]
name = "crowd-flow-analyzer"
version = "0.1.0"
description = "Video-based crowd flow and demographics analyzer"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "ultralytics>=8.2.0",
    "supervision>=0.21.0",
    "deepface>=0.0.93",
    "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
