[project]
name = "crowd-flow-analyzer"
version = "0.1.0"
description = "Video-based crowd flow and demographics analyzer"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "ultralytics>=8.2.0",
    "supervision>=0.21.0",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.18.0",
    "opencv-python-headless>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Pin PyTorch to cu129 so it matches NVIDIA driver 575 (max CUDA 12.9).
# cu130 requires driver >=580 which is not yet available on this server.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
