[project]
name = "crowd-flow-analyzer"
version = "0.1.0"
description = "Video-based crowd flow and demographics analyzer"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "ultralytics>=8.2.0",
    "supervision>=0.21.0",
    "transformers>=4.40.0",
    "timm",
    "opencv-python-headless>=4.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "setuptools",
    "mivolo",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Pin PyTorch to cu128 — the latest official CUDA version supported by driver 575.
# Driver 575 supports up to CUDA 12.9; cu128 (CUDA 12.8) is backwards-compatible.
# cu130 requires driver >=580 which is not available on this server.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# MiVOLO requires timm 0.8.13dev0 (never released to PyPI)
timm = { git = "https://github.com/huggingface/pytorch-image-models.git", tag = "v0.8.13dev0" }
mivolo = { git = "https://github.com/asharca/MiVOLO.git" }

[tool.uv]
# MiVOLO pins ultralytics==8.1.0, but we need >=8.2.0. Override the transitive pin.
override-dependencies = ["ultralytics>=8.2.0"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
